- BUG: Issue #455: Crash in TortoiseIDiff and
       TortoiseUDiff on Windows8. (Stefan)
- BUG: Issue #456: offline log mode does
       not activate. (Stefan)
- BUG: Issue #459: Setting a property recursively
       in the repo browser segfaults. (Stefan)
- BUG: Issue #462:  revision links not created
       in commit comments when started from
       the repo browser. (Stefan)

Version 1.7.11
- BUG: Issue #428: out-of-date error when modifying
       properties from the repository browser. (Stefan)
- BUG: Issue #429: crash if config file is
       invalid or corrupted. (Stefan)
- BUG: Issue #430: repo browser does not
       refresh properly. (Stefan)
- BUG: Issue #433: Show log by date range is using
       only "start" or "end" date, not both. (Stefan)
- BUG: Issue #435: child items not shown when
       adding an ignored folder. (Stefan)
- BUG: Issue #437: wrong error message shown
       in repo browser. (Stefan)
- BUG: Issue #440: svn:needs-lock not recognized
       if it has an empty value. (Stefan)
- BUG: Issue #441: crash in commit dialog. (Stefan)
- BUG: Issue #442: "File not found" error when showing log
       of file whose folder has been copied from
       an older revision. (Stefan)

Version 1.7.10
- BUG: Issue #406: wrong image positioning. (Stefan)
- BUG: Issue #408: repeated authentication
       and crashes. (Stefan)
- BUG: Issue #409: language pack fails to install
       in silent mode. (Stefan)
- BUG: Issue #412: TMerge options affect
       other instances. (Stefan)
- BUG: Issue #413: wrong unescaped path
       in Log Dialog. (Stefan)
- BUG: Issue #414: Words with german umlauts not
       highlighted after log message search. (Stefan)
- BUG: Issue #415: Check-for-modifications dialog shows
       folders as files for sparse checkouts. (Stefan)
- BUG: Issue #418: Unexpected warning - Non-recursive
       commit of moved/renamed folders. (Stefan)
- BUG: Issue # 398: Copied files don't get reverted
       to recycle bin. (Stefan)