@@ -17,6 +17,8 @@ Version 1.7.12
 - BUG: Issue #462:  revision links not created
        in commit comments when started from
        the repo browser. (Stefan)
+- BUG: Issue #463: Selection is wrong after sorting
+       the file column in the log dialog. (Stefan)
 
 Version 1.7.11
 - BUG: Issue #428: out-of-date error when modifying
